--- a/style.css
+++ b/style.css
@@ -77,16 +77,17 @@ h2 {
   border: 10px;
   border-radius: 7px;
 }
-.naglowek__heading--title{
+.head__title{
   max-width: 1000px;
   position: relative;
-  margin-left: 475px;
+  margin: 0 auto;
   padding-top: 20px;
+  color: darkred;
 
 }
 .naglowek__heading--img{
   position: relative;
-  margin-left: 475px;
+  margin: 0 auto;
   padding: 20px;
 }
 .Navigation__Header{
