--- a/style.css
+++ b/style.css
@@ -83,12 +83,14 @@ h2 {
   margin: 0 auto;
   padding-top: 20px;
   color: darkred;
+  display: flex;
 
 }
 .naglowek__heading--img{
   position: relative;
   margin: 0 auto;
   padding: 20px;
+  display: flex;
 }
 .Navigation__Header{
   color: rgb(0, 4, 243);
@@ -100,4 +102,11 @@ h2 {
 }
 .header__main{
   background-color: rgb(0, 103, 206);
+}
+.foot{
+background-color: orangered;
+color: deepskyblue;
+font: 20px;
+font-weight: bold;
+font-style: italic; 
 }
